@@ -64,6 +64,7 @@ enum {
   /* Device reset and suspend.  */
   USB_EVENT_DEVICE_RESET,
   USB_EVENT_DEVICE_SUSPEND,
+  USB_EVENT_DEVICE_WAKEUP,
   /* Device Requests (Control WRITE Transfer): Standard */
   USB_EVENT_SET_CONFIGURATION,
   USB_EVENT_SET_INTERFACE,
@@ -135,12 +136,15 @@ void usb_lld_prepare_shutdown (void);
 void usb_lld_shutdown (void);
 
 #if defined(MCU_KINETIS_L)
+#define INTR_REQ_USB 24
 void usb_lld_tx_enable_buf (int ep_num, const void *buf, size_t len);
 void usb_lld_rx_enable_buf (int ep_num, void *buf, size_t len);
 
 void usb_lld_setup_endp (struct usb_dev *dev, int ep_num, int rx_en, int tx_en);
 void usb_lld_stall (int ep_num);
 #elif defined(GNU_LINUX_EMULATION)
+#include <signal.h>
+#define INTR_REQ_USB SIGUSR1
 void usb_lld_tx_enable_buf (int ep_num, const void *buf, size_t len);
 void usb_lld_rx_enable_buf (int ep_num, void *buf, size_t len);
 
@@ -148,6 +152,7 @@ void usb_lld_setup_endp (struct usb_dev *dev, int ep_num, int rx_en, int tx_en);
 void usb_lld_stall_tx (int ep_num);
 void usb_lld_stall_rx (int ep_num);
 #else
+#define INTR_REQ_USB 20
 /* EP_TYPE[1:0] EndPoint TYPE */
 #define EP_BULK        (0x0000) /* EndPoint BULK        */
 #define EP_CONTROL     (0x0200) /* EndPoint CONTROL     */
